--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@flatten-js/core": "^1.6.8",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "pdf-lib": "^1.17.1",
@@ -17,6 +19,7 @@
     "rbush": "^4.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
